# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  Edit.md  LOG_FILE.txt  MyREADME.md  README.md  foo.cpp
NanoDegreeProgrammLessons/: .gitignore
NanoDegreeProgrammLessons/1-Fundemantals/: READEME.md
NanoDegreeProgrammLessons/1-Fundemantals/Lesson2-IntroductionToCpp/: 1.board  again.cpp  main.cpp
NanoDegreeProgrammLessons/1-Fundemantals/Lesson3-A*Search/: main.cpp
NanoDegreeProgrammLessons/2-ObjectOrientedProgramming-OOP/: README.md
NanoDegreeProgrammLessons/2-ObjectOrientedProgramming-OOP/Lesson2-IntroTpOOP/: main.cpp  memset.cpp
NanoDegreeProgrammLessons/3-MemoryMangment/: README.md
NanoDegreeProgrammLessons/3-MemoryMangment/Lesson2-OverviewOfMemoryType/: gdbcheatcheet.txt
NanoDegreeProgrammLessons/3-MemoryMangment/Lesson3-VariableMemory/: c.cpp  main.cpp  overflow.cpp  pass_by_pointer.cpp  pointer_vs_reference.cpp  quiz.cpp  stackoverflow.cpp
NanoDegreeProgrammLessons/4-Concurrency/Lesson1-IntroductionAndRunningThreads/: Concurrency.docx  Part2-ProccessAndThreads.md  Part3-RunningASingleThread.md  Part4-StartingThreadWithFunction.md  main.cpp
NanoDegreeProgrammLessons/Capstone/1-CapstoneIntro/: README.md
NanoDegreeProgrammLessons/Capstone/2-StepsToCompleteCapstone/: README.md
NanoDegreeProgrammLessons/Capstone/3-GameProgramming/: README.md
data/: LOG_FILE.txt
src/: controller.cpp  controller.h  game.cpp  game.h  log.cpp  log.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  snake.cpp  snake.h
(+170 files in other folders)
